registerpage formvalidation works on frontend small issue: if all errors are visible the button is pocking out of the border
also small adjustment in navbar

--- a/frontend_new/src/Components/Navbar/Navbar.css
+++ b/frontend_new/src/Components/Navbar/Navbar.css
@@ -58,6 +58,7 @@
     font-weight: 500;
     background: white;
     cursor: pointer;
+    margin-bottom: 20px;
 }
 
 .nav-login button:active {
